fixed overflow issue w mobile menu

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,9 +16,8 @@
 body {
     font-family: "Inter", sans-serif;
     display: grid;
+    grid-template-columns: 1fr;
     gap: 2rem;
-    width: 100vw;
-    overflow-x: hidden;
 }
 
 a {
@@ -37,17 +36,14 @@ button {
 /* Navbar */
 .navbar {
     position: sticky;
-    z-index: 1000;
     top: 0;
-    /* border-bottom: 2px solid var(--primary-color); */
-    /* background-color: var(--background-color); */
+    z-index: 1000;
+    width: 100%;
     background-color: var(--primary-color);
-    padding: 0.8rem 4rem;
+    padding: 1rem 2rem;
     display: grid;
-    gap: 2rem;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
 }
 
 .logo {
@@ -302,6 +298,7 @@ button {
 #mobile-resume-download {
     width: fit-content;
     display: none;
+    justify-self: center;
 }
 
 
@@ -326,11 +323,11 @@ footer {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
     border-bottom: 1px solid var(--secondary-color);
-    padding-bottom: 2rem;
+    padding: 1rem 0;
     align-items: center;
 }
 
-#projects:last-child {
+.project-tile:last-child {
     border-bottom: none;
 }
 
@@ -379,6 +376,17 @@ footer {
 
 @media screen and (max-width: 585px) {
 
+    body {
+        width: 100vw;
+        overflow-x: hidden;
+    }
+
+    .navbar {
+        padding: 1rem 1.5rem;
+        transition: all 0.3s ease;
+        position: sticky;
+    }
+
     /* nav turns to hamburger menu here! */
     .menu-toggle {
         display: block;
@@ -386,9 +394,11 @@ footer {
     }
 
     .nav-links {
-        /* display: none; */
         position: absolute;
+        visibility: hidden;
+        transform: translateX(100%);
         top: 100%; 
+        left: 0; 
         width: 100%;
         height: 100vh;
         background-color: var(--primary-color);
@@ -397,8 +407,8 @@ footer {
         grid-template-rows: 1fr auto auto auto 1fr;
         gap: 1.5rem;
         border-top: 2px solid var(--background-color);
-        visibility: hidden;
-        transform: translateX(100%); /* Initially off-screen */
+        transition: transform 0.5s ease;
+        will-change: transform; 
         a {
             color: var(--background-color);
         }
@@ -428,19 +438,25 @@ footer {
     }
 
     .nav-links.open {
-        display: grid;
         visibility: visible;
         transform: translateX(0);
     } 
 
     .nav-links.closed {
         visibility: visible;
+        /* the transformation is already done in the original nav-links class
+            this just removes the transformation done by 'open' while keeping it visible */
     }
 
     /* make the download resume button visible in the contact page */
     /* even though its in the nav links, i want it to be accessible without opening the nav */
     #mobile-resume-download {
         display: block;
+    }
+
+    #about, #contact, #projects {
+       margin: 0 2.5rem;
+       padding-top: 0;
     }
     
 }
@@ -520,5 +536,19 @@ footer {
     #read-more {
         grid-row: -1;
     }
+
+    .contact-subtitle {
+        text-align: center;
+        margin-top: 2rem;
+    }
+    .contact-container {
+        justify-content: center;
+        text-align: center;
+    }
+
+    .social-links {
+        justify-content: center;
+    }
+
 }
 
